# hi-agents

./: .gitignore  Cargo.toml  package.json  test_ws_client.py  test_ws_client.ts
docs/plans/: 2026-02-04-websocket-session-design.md  2026-02-04-websocket-session-impl.md
src/: main.rs  ws.rs
src/agent/: mod.rs  traits.rs
src/agent/backends/: claude.rs  mod.rs
src/claude/: error.rs  mod.rs  process_handle.rs
src/claude/transport/: mod.rs  stream.rs  transport2.rs
src/claude/types/: agent.rs  control.rs  hooks.rs  mcp.rs  messages.rs  mod.rs  permissions.rs  sandbox.rs
web/: index.html  package.json
web/src/: App.tsx  types.ts
web/src/components/: ChatPanel.tsx  DebugPanel.tsx
web/src/hooks/: useWebSocket.ts
