[package]
name = "agentty"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = "0.9.3"
uuid = { version = "1.20.0", features = ["v4"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2"
which = "8.0.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3"
chrono = "0.4"
axum = { version = "0.7", features = ["ws"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
claude-agent-sdk = { path = "../claude" }
codex = { path = "../codex" }
async-stream = "0.3"
tower-http = { version = "0.6", features = ["fs"] }
dashmap = "6"
rust-embed = "8.5"
mime_guess = "2.0"
agent = { path = "../agent" }